# signalclaw

./: .dockerignore  .env.example  .gitignore  .gitkeep  CODEOWNERS  CONTRIBUTING.md  FINANCIAL_DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
data/: drawdown_guard.json  subprocessors.json  watchlist.json
data/sso/: oidc.json
docs/: ARCHITECTURE.md  SAMPLE_REPORT.md  SECURITY.md  threat-model.md
docs/adr/: 0001-record-architecture-decisions.md  0002-yfinance-and-parquet.md  0003-finbert-with-fallback.md  0004-walk-forward-backtest.md  0005-ci-gated-by-variable.md
docs/indicators/: atr.md  bollinger.md  ema.md  log_returns.md  macd.md  obv.md  rsi.md  sentiment_5d.md  sma.md  volatility_regime.md
docs/playbook/: bonds-credit.md  bonds-treasury.md  commodities-energy.md  commodities-metals.md  crypto-l1.md  crypto-l2.md  crypto-spot.md  equities-megacap.md  equities-semis.md  equities-software.md  etfs-broad.md  etfs-sector.md  fx-majors.md  mutual-funds.md
docs/sources/: registry.md
docs/tickers/: AAPL.md  ABBV.md  ABNB.md  ABT.md  ADA-USD.md  ADBE.md  AMD.md  AMZN.md  ARKK.md  ATOM-USD.md  AVAX-USD.md  AVGO.md  AXP.md  BA.md  BAC.md  BKNG.md  BLK.md  BND.md  BTC-USD.md  BX.md  C.md  CAT.md  CI.md  COP.md  COST.md  CRM.md  CSCO.md  CVS.md  CVX.md  DE.md  DHR.md  DIA.md  DIS.md  DOT-USD.md  EEM.md  EMR.md  EOG.md  ETH-USD.md  ETN.md  EWC.md  (+92 more)
infra/docker/: Dockerfile.api  Dockerfile.web  docker-compose.dev.yml  docker-compose.prod.yml
infra/terraform/: README.md  main.tf  values.yaml
scripts/: dev.sh  notify_sample.py  seed_demo.sh
tests/: conftest.py  test_alert_history.py  test_alerts.py  test_alerts_api.py  test_api.py  test_api_keys_admin.py  test_api_keys_dormant.py  test_api_keys_expiry.py  test_api_keys_expiry_warning.py  test_api_keys_label.py  test_api_keys_last_used_fingerprint.py  test_api_keys_path_allowlist.py  test_api_keys_rbac.py  test_api_keys_review.py  test_api_keys_rotate.py  test_api_keys_suspend.py  test_attribution.py  test_audit.py  test_audit_anomalies.py  test_audit_hash_chain.py  test_audit_retention.py  test_audit_search_export.py  test_backtest_api.py  test_body_limit.py  test_brackets.py  test_brackets_api.py  test_break_glass.py  test_correlation.py  test_correlation_api.py  test_cors_policy.py  test_costs.py  test_docker_api_image.py  test_drawdown.py  test_drawdown_api.py  test_dry_run.py  test_earnings.py  test_earnings_api.py  test_execution_api.py  test_execution_router.py  test_explain.py  (+78 more)
web/: .gitignore  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
(+612 files in other folders)
