[project]
name = "signalclaw"
version = "0.1.0"
description = "Personal stock + crypto signal bot. NOT financial advice."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "structlog>=24.4",
  "httpx>=0.27",
  "yfinance>=0.2.40",
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=17.0",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "xgboost>=2.1",
  "torch>=2.3",
  "transformers>=4.44",
  "feedparser>=6.0",
  "click>=8.1",
  "rich>=13.7",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "hypothesis>=6.112",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[project.scripts]
signalclaw = "signalclaw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signalclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
