[project]
name = "signalclaw"
version = "0.1.0"
description = "Personal stock + crypto signal bot. NOT financial advice."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "structlog>=24.4",
  "httpx>=0.27",
  "yfinance>=0.2.40",
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=17.0",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "xgboost>=2.1",
  "torch>=2.3",
  "transformers>=4.44",
  "feedparser>=6.0",
  "click>=8.1",
  "rich>=13.7",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "prometheus-client>=0.20",
  "sentry-sdk[fastapi]>=2.14",
  "hypothesis>=6.112",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[project.scripts]
signalclaw = "signalclaw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signalclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["web", "data", "infra", "docs", "scripts"]

[tool.ruff.lint]
# Pragmatic baseline: pyflakes + a focused subset of pycodestyle.
# Bugbear, pyupgrade, etc. are deliberately off for now to keep the
# gate green on the existing codebase. Tighten over time.
select = ["F", "E4", "E7", "E9", "W6"]
ignore = [
  "E402",  # module-level import not at top of file (tests do conditional skips)
  "E702",  # multiple statements on one line; tolerated in compact test setup
  "E741",  # ambiguous variable names (l, I) appear in math-heavy code
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-export shims
"tests/*" = ["F401", "F841"]
